# parrot_bot

./: pyproject.toml
parrot_bot/: DB.py  bot_init.py  client.py  keyboards.py  logic.py
parrot_bot/DB/: Parrot_Bot.db
parrot_bot/bot/: common.py  keyboards.py  logic.py
parrot_bot/scripts/: add_parrot_img.py  start_bot.py
tests/: test_parrot_bot.py
