[tool.poetry]
name = "parrot_bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.21"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
start-bot = "parrot_bot.scripts.start_bot:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
